Fix the scroll bug in DataGrid
Currently the last row is completely overlapping with the horizontal scrollbar, change overflow value to 'scroll' to avoid this

Fixed: 1330482
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/3683224
Commit-Queue: Nancy Li <nancyly@chromium.org>
Auto-Submit: Nancy Li <nancyly@chromium.org>

--- a/front_end/ui/legacy/components/data_grid/dataGrid.css
+++ b/front_end/ui/legacy/components/data_grid/dataGrid.css
@@ -25,7 +25,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  overflow: overlay;
+  overflow: scroll;
   transform: translateZ(0);
   background-color: var(--color-background);
 }
